--- a/Pagina_musica/music.css
+++ b/Pagina_musica/music.css
@@ -141,7 +141,7 @@ nav {
      "menu1 music";
      gap: 1em;
      width: 100%;
-     height: 100%;
+     height: 100vh;
      background-color: rgb(0, 0, 0);
 }
 
