--- a/Pagina_musica/music.css
+++ b/Pagina_musica/music.css
@@ -798,7 +798,12 @@ padding-bottom: 0rem;
 
 
 
+@media screen and (max-height: 1202px ) and (max-width: 1202px) {
+     nav{
+          overflow-x: scroll;
+     }
 
+}
 
 
 
